--- a/ski_bar/src/main/resources/application.yml
+++ b/ski_bar/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ski_bar?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: Zzy190015
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 logging:
@@ -18,6 +18,8 @@ logging:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:/com/g5619/mapper/xml/**.xml
+  type-aliases-package: com.g5619.entity
 
 #  global-config:
 #    db-config:
