feat:activitylist add two cloumns

--- a/ski_bar/pom.xml
+++ b/ski_bar/pom.xml
@@ -91,6 +91,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--添加邮件依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
     </dependencies>
 
