--- a/ski_bar/src/main/resources/application.yml
+++ b/ski_bar/src/main/resources/application.yml
@@ -30,8 +30,8 @@ mybatis-plus:
 mail:
   host: smtp.qq.com #邮件服务器地址
   port: 465 #端口号
-  username: 1295184078@qq.com
-  password: nwzvcghhtpksfebi
+  username: 
+  password: 
   default-encoding: UTF-8 #默认编码格式
   properties:
     mail:
