--- a/ski_bar/src/main/resources/application.yml
+++ b/ski_bar/src/main/resources/application.yml
@@ -2,11 +2,32 @@ server:
   port: 8181
 
 spring:
+  mail:
+    # 配置 SMTP 服务器地址
+    host: smtp.qq.com
+    # 发送者邮箱
+    username: 1295184078@qq.com
+    # 配置密码，注意不是真正的密码，而是刚刚申请到的授权码
+    password:
+    # 端口号465或587
+    port: 587
+    transport:
+      protocol: smtp
+    # 默认的邮件编码为UTF-8
+    default-encoding: UTF-8
+    # 配置SSL 加密工厂
+    properties:
+      mail:
+        smtp:
+          socketFactoryClass: javax.net.ssl.SSLSocketFactory
+        #表示开启 DEBUG 模式，这样，邮件发送过程的日志会在控制台打印出来，方便排查错误
+        debug: true
   datasource:
     url: jdbc:mysql://localhost:3306/ski_bar?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+
 
 logging:
   level:
@@ -25,18 +46,3 @@ mybatis-plus:
 #      logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以不加步骤2的注解)
 #      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
 #      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-
-
-mail:
-  host: smtp.qq.com #邮件服务器地址
-  port: 465 #端口号
-  username: 
-  password: 
-  default-encoding: UTF-8 #默认编码格式
-  properties:
-    mail:
-      debug: true #启动debug调试
-      smtp:
-        socketFactory:
-          class: javax.net.ssl.SSLSocketFactory #SSL连接配置
-
