--- a/ski_bar/src/main/resources/application.yml
+++ b/ski_bar/src/main/resources/application.yml
@@ -25,8 +25,13 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ski_bar?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: Zzy190015
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  mvc:
+    view:
+      suffix: .html
+      prefix: /pages/
 
 logging:
   level:
